2008-05-19  Vincent Untz  <vuntz@gnome.org>

	* libmenu/gmenu-tree.c: (load_parent_merge_file): do not return the
	fact that we've found a base directory, but the fact that we really a
	found a parent menu file. Fix a bug where the fallback on the filename
	in <MergeFile> couldn't be used. 

2008-05-18  Vincent Untz  <vuntz@gnome.org>

	Fix the values of <DefaultLayout> (ie, show_empty, inline,
	inline_limit, etc.) not being inherited by submenus when the
	<DefaultLayout> node is after the <Menu> node in the .menu file.
	Can also fix other issues when there are multiple <DefaultLayout> nodes
	mixed with the <Menu> nodes.

	* libmenu/gmenu-tree.c: (gmenu_tree_directory_new): do not set the
	default layout values from the parent here since we might not have
	the values of the parent yet. So just set to the default values.
	(set_default_layout_values): new, set the default layout values of a
	menu based on its parent, and then iterate on the children to do the
	same
	(process_layout): after having iterated over all the nodes, we'll have
	found <DefaultLayout> if there's one and so we can make the submenus
	inherit it

2008-05-17  Vincent Untz  <vuntz@gnome.org>

	* libmenu/gmenu-tree.c: (gmenu_tree_canonicalize_path): remove useless
	test that will always result in TRUE

2008-05-17  Vincent Untz  <vuntz@gnome.org>

	Implement missing part of the menu spec: handling of $XDG_MENU_PREFIX
	for applications.menu
	Bug #533475

	* libmenu/gmenu-tree.c: (canonicalize_basename): new, based on code
	from gmenu_tree_canonicalize_path
	(gmenu_tree_canonicalize_path): if the requested file is
	applications.menu and the XDG_MENU_PREFIX environment variable is set,
	use ${XDG_MENU_PREFIX}applications.menu is used
	(gmenu_tree_get_menu_file): we need to return the basename of the real
	file, potentially with $XDG_MENU_PREFIX. So find which file is being
	used first.
	(load_merge_file): update for menu_layout_load update
	(gmenu_tree_load_layout): ditto